fixed: 去掉不兼容的column-gap

--- a/webs/2022-4-zby-xiamen/sass/_footer.scss
+++ b/webs/2022-4-zby-xiamen/sass/_footer.scss
@@ -5,7 +5,6 @@ footer.footer {
 
   div.footer-top.container {
     @include flex-row-sb;
-    column-gap: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
 
@@ -16,7 +15,7 @@ footer.footer {
     a.fotter-logo {
       @include flex-row-center;
       flex: 2;
-      column-gap: 10px;
+      padding-right: 10px;
 
       @include media-query($large) {
         img {
@@ -40,6 +39,10 @@ footer.footer {
             width: 173px;
           }
         }
+      }
+
+      img {
+        margin-right: 10px;
       }
     }
 
@@ -65,7 +68,6 @@ footer.footer {
     div.footer-info {
       display: flex;
       flex-wrap: wrap;
-      column-gap: 15px;
       flex: 2;
 
       @include media-query($medium-down) {
@@ -77,6 +79,7 @@ footer.footer {
         font-size: $font-size-b;
         color: $color-white;
         padding-bottom: 10px;
+        margin-right: 15px;
 
         @include media-query($medium-down) {
           text-align: center;
@@ -86,7 +89,6 @@ footer.footer {
 
     div.qr-code {
       @include flex-row-center;
-      column-gap: 10px;
       flex: 1;
 
       @include media-query($medium-down) {
@@ -98,6 +100,7 @@ footer.footer {
         writing-mode: vertical-lr;
         font-size: $font-size-b;
         color: $color-white;
+        margin-right: 10px;
 
         @include media-query($medium-down) {
           writing-mode: inherit;
